added images to README

--- a/problem7.html
+++ b/problem7.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <img src="not working">
-    <p><strong><i>Image not working 😭</i></strong></p>
+    <p><strong><i>Image and audio not working 😭</i></strong></p>
     <audio src="not working" controls></audio>
 
 </body>
